--- a/sqrt_viz.ipynb
+++ b/sqrt_viz.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decompose number into sum of squares"
+    "## Decompose number into sum of squares"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trivial algorithm\n",
+    "## Trivial algorithm\n",
     "\n",
-    "> returns one of the many sum of square decompositions. Favors splits from the middle of the number-ish, for prettier visuals"
+    "Returns one of the many sum of square decompositions. Favors splits from the middle of the number-ish, for prettier visuals"
    ]
   },
   {
@@ -71,7 +71,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot triangles fom sum of squares"
+    "### Better algorithm\n",
+    "Ideally, would give us all the sum of square decompositions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot triangles from sum of squares"
    ]
   },
   {
