comment figure saving to prevent future overwrites

--- a/sqrt_julia.ipynb
+++ b/sqrt_julia.ipynb
@@ -338,7 +338,7 @@
     "end\n",
     "\n",
     "scatter!([0],[0], label=nothing)\n",
-    "savefig(p, \"imgs/new1.png\")\n",
+    "# savefig(p, \"imgs/new1.png\")\n",
     "p"
    ]
   },
